k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: roadmk-backend
  namespace: roadmk
spec:
  replicas: 2
  selector:
    matchLabels:
      app: roadmk-backend
  template:
    metadata:
      labels:
        app: roadmk-backend
    spec:
      containers:
        - name: roadmk-backend
          image: mimi2005/roadmk-backend:latest
          ports:
            - containerPort: 8000
