k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: roadmk-db
  namespace: roadmk
spec:
  serviceName: roadmk-db
  replicas: 1
  selector:
    matchLabels:
      app: roadmk-db
  template:
    metadata:
      labels:
        app: roadmk-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: roadmk-db-storage
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: roadmk-db-storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
